<resources>
    <string name="app_name">Empty Project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="email_hint">e-mail</string>
    <string name="password_hint">password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="do_not_remember_password">Do not remember password?</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="rest">Reset</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="understand">Understand</string>
    <string name="success">Success</string>
    <string name="password_has_been_reset">Password has been reset. Check your e-mail</string>
    <string name="error">Error</string>
    <string name="api_error">Occurred api error. Try again letter</string>
    <string name="account_has_been_created">Your account has been created</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="your_menu">your menu</string>
    <string name="browse_recipes">browse recipes</string>
    <string name="favourite_recipes">favourite recipes</string>
    <string name="favourite">favourite</string>
    <string name="your_menu_title">Hello! What do you want to eat?</string>
    <string name="i_do_not_like">I do not like…</string>
    <string name="avoid_ingredients">Avoid these ingredients</string>
    <string name="description_title">Description</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="your_menu_upper">Your menu</string>
    <string name="unknown">Unknown</string>
    <string name="recipe_mark_as_favourite">Recipe has been marked as favourite</string>
    <string name="remove">Remove</string>
    <string name="recipe_removed_from_favourites">Recipe has been removed</string>
    <string name="method_title">Method</string>
</resources>
