<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Sławomir Przybylski
  ~ 18/04/20 20:57
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="io.slavisdev.zpi.ui.auth.register.RegisterFragmentViewModel" />
        <variable
            name="viewAccess"
            type="io.slavisdev.zpi.ui.auth.register.RegisterFragmentViewAccess" />
    </data>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            style="@style/TextSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editText_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_32"
            android:gravity="center"
            android:theme="@style/InputTextLayout"
            app:boxBackgroundMode="outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="@={model.email}"
                android:textColor="@color/textColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_32"
            android:gravity="center"
            android:theme="@style/InputTextLayout"
            app:boxBackgroundMode="outline"
            app:layout_constraintTop_toBottomOf="@+id/editText_login">

            <EditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="@={model.password}"
                android:textColor="@color/textColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            style="@style/ButtonOutline"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_48"
            android:layout_marginBottom="@dimen/margin_16"
            android:onClick="@{() -> model.register()}"
            android:stateListAnimator="@null"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    </LinearLayout>

</layout>