<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Sławomir Przybylski
  ~ 18/04/20 20:56
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="io.slavisdev.zpi.ui.auth.login.LoginFragmentViewModel" />
        <variable
            name="viewAccess"
            type="io.slavisdev.zpi.ui.auth.login.LoginFragmentViewAccess" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginEnd="@dimen/margin_48"
            android:background="@drawable/modal_background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                style="@style/TextSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_32"
                android:gravity="center"
                android:theme="@style/InputTextLayout"
                app:boxBackgroundMode="outline"
                android:hint="@string/email_hint"
                android:textColorHint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="@={model.email}"
                    android:textColor="@color/textColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_32"
                android:gravity="center"
                android:theme="@style/InputTextLayout"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/password_hint"
                app:boxBackgroundMode="outline"
                app:layout_constraintTop_toBottomOf="@+id/editText_login">

                <EditText
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={model.password}"
                    android:textColor="@color/textColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                style="@style/ButtonOutline"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/margin_48"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_48"
                android:layout_marginBottom="@dimen/margin_16"
                android:onClick="@{() -> model.login()}"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_password" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_text_height"
            android:layout_marginTop="@dimen/margin_24"
            android:onClick="@{() -> viewAccess.showRegisterScreen()}"
            android:stateListAnimator="@null"
            android:text="@string/do_not_have_an_account"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_forget_password"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_text_height"
            android:layout_marginTop="@dimen/margin_4"
            android:onClick="@{() -> viewAccess.showForgetPasswordScreen()}"
            android:stateListAnimator="@null"
            android:text="@string/do_not_remember_password"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/button_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>