<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Sławomir Przybylski
  ~ 18/04/20 20:53
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="io.slavisdev.zpi.ui.auth.forget_password.ForgetPasswordFragmentViewModel" />
        <variable
            name="viewAccess"
            type="io.slavisdev.zpi.ui.auth.forget_password.ForgetPasswordFragmentViewAccess" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_48"
            android:layout_marginEnd="@dimen/margin_48"
            android:background="@drawable/modal_background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                style="@style/TextSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_your_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_32"
                android:gravity="center"
                android:theme="@style/InputTextLayout"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/email_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="@={model.email}"
                    android:textColor="@color/textColor" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                style="@style/ButtonOutline"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/margin_48"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_48"
                android:layout_marginBottom="@dimen/margin_16"
                android:onClick="@{() -> model.resetPassword()}"
                android:stateListAnimator="@null"
                android:text="@string/rest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_password" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>