<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Sławomir Przybylski
  ~ 26/05/20 09:37
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="io.slavisdev.zpi.ui.recpie.RecipeFragmentViewModel" />
        <variable
            name="viewAccess"
            type="io.slavisdev.zpi.ui.recpie.RecipeFragmentViewAccess" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:shapeAppearance="@style/CardViewTop">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TextSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@{model.title}"
                    android:textAlignment="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/imageView"
                    imageFromUri="@{model.imageUrl}"
                    android:layout_width="136dp"
                    android:layout_height="85dp"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@drawable/rounded_corners"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button"
                    style="@style/ButtonOutline"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_32"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:drawableEnd="@drawable/ic_heart"
                    android:drawableTint="@color/white"
                    android:onClick="@{() -> model.markAsFavourite()}"
                    android:paddingEnd="@dimen/margin_8"
                    android:text="@string/favourite"
                    app:cornerRadius="12dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/TextRegularSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{model.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/button"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    app:srcCompat="@drawable/ic_user" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/TextRegularSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{model.servings}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_32"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="@+id/imageView2"
                    app:srcCompat="@drawable/ic_clock" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/TextRegularSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:text="@{model.preparationTime}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/TextRegular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/description_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/TextRegular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/ingredients_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView11"
                    style="@style/TextRegular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/method_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ingredients" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </com.google.android.material.card.MaterialCardView>
</layout>